--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,10 @@
 <app-nav-var></app-nav-var>
+
+<h1>asdasd</h1>
+<h1>asdasd</h1>
+<h1>asdasd</h1>
+<h1>asdasd
+    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, blanditiis. Repellendus incidunt magni eos quae nam hic dicta odit eaque accusamus, eveniet voluptatibus autem perferendis harum illum cupiditate consectetur sapiente.
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere commodi corporis inventore aperiam, quidem in iste eligendi! Tempora, sunt officia laborum expedita sit, exercitationem sapiente veritatis necessitatibus labore nostrum ipsam.
+</h1>
+<app-footer-component></app-footer-component>
