Ajustando componentes y su estructura

--- a/src/app/Components/footer-component/footer-component.component.html
+++ b/src/app/Components/footer-component/footer-component.component.html
@@ -1,4 +1,6 @@
 
+<!--Pie de Pagina de la Aplicacion-->
+
 <footer class="bg-dark text-light text-center py-3">
     <p>&copy; 2024 Commits Explorer - Todos los derechos reservados -Ing.  Jonnier Andres Teran Morales</p>
 </footer>
