--- a/src/app/Components/nav-var/nav-var.component.html
+++ b/src/app/Components/nav-var/nav-var.component.html
@@ -1,3 +1,6 @@
+<!--Estructura HTML del nav var-->
+
+
 <nav class="navbar navbar-expand-lg navbar-light bg-primary">
     <div class="container-fluid">
         <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--AOunT8g5--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_auto%2Cw_800/https://thepracticaldev.s3.amazonaws.com/i/78hs31fax49uwy6kbxyw.png" alt="Logo Dev" height="50" width="80px" class="d-inline-block align-text-top">
