--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<!--Componente Nav var-->
 <app-nav-var></app-nav-var>
 
 <h1>asdasd</h1>
@@ -7,4 +8,6 @@
     Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde, blanditiis. Repellendus incidunt magni eos quae nam hic dicta odit eaque accusamus, eveniet voluptatibus autem perferendis harum illum cupiditate consectetur sapiente.
     Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facere commodi corporis inventore aperiam, quidem in iste eligendi! Tempora, sunt officia laborum expedita sit, exercitationem sapiente veritatis necessitatibus labore nostrum ipsam.
 </h1>
+
+<!--Componente Footer-->
 <app-footer-component></app-footer-component>
