--- a/src/app/Components/grafic-commits-component/grafic-commits-component.component.html
+++ b/src/app/Components/grafic-commits-component/grafic-commits-component.component.html
@@ -12,7 +12,7 @@
             <div class="container-fluid custom-container">
                 <span id="span">Se mostraran los resultados de las ultimas 7 semanas de cada repositorio.</span>
                 <div class="card custom-card">
-                    <p-chart type="line" [data]="data" [options]="options"></p-chart>
+                    <p-chart type="line" [data]="data" [options]="options" style="cursor: pointer;"></p-chart>
                 </div>
             </div>
         </div>
