--- a/src/app/Components/grafic-commits-component/grafic-commits-component.component.html
+++ b/src/app/Components/grafic-commits-component/grafic-commits-component.component.html
@@ -1,6 +1,6 @@
 <div>
     <input type="text" class="b5" placeholder="Ingrese su búsqueda">
-    <button class="btn-primary">Buscar</button>
+    <button class="btn-primary" (click)="GetResponseAPI()">Buscar</button>
 </div>
 
 <br><br>
