--- a/src/app/Components/grafic-commits-component/grafic-commits-component.component.html
+++ b/src/app/Components/grafic-commits-component/grafic-commits-component.component.html
@@ -1,14 +1,28 @@
-<div>
-    <input type="text" class="b5" placeholder="Ingrese su búsqueda">
-    <button class="btn-primary" (click)="GetResponseAPI()">Buscar</button>
-</div>
 
-<br><br>
+<br>
 
 <!--Estructura Html para la grafica utilizando la libreria Prime ng y charts js-->
 <div class="container-fluid custom-container">
     <div class="container-fluid custom-container">
         <div class="container-fluid custom-container">
+            <div class="container-fluid custom-container">
+                <form>
+                <input type="text" class="b5" placeholder="Ingrese su búsqueda"> &nbsp;
+
+                <select  id="selectNumber">
+                      <option hidden>Selecciona La Cantidad de Repositorios:</option> 
+                      <option>1</option> 
+                      <option>2</option>
+                      <option>3</option>
+                      <option>4</option>
+                      <option>5</option>
+                      <option>6</option>
+                    </select>
+                  
+                    &nbsp;
+                <button type="button" class="btn btn-primary" (click)="GetResponseAPI()">CONSULTAR</button>
+            </form>
+            </div>
             <div class="container-fluid custom-container">
                 <span id="span">Se mostraran los resultados de las ultimas 7 semanas de cada repositorio.</span>
                 <div class="card custom-card">
